with intl support

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,1 +1,4 @@
-{}
+{
+  "youHavePushedTheButtonThisManyTimes": "You have pushed the button this many times:",
+  "incrementButtonText": "Increment"
+}
